--- a/webapp/package.json
+++ b/webapp/package.json
@@ -6,8 +6,11 @@
   "dependencies": {
     "@material-ui/core": "^4.1.1",
     "axios": "^0.19.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-device-detect": "^1.6.2",
+    "react-dom": "^16.8.6",
+    "uniqid": "^5.0.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.0",
