--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,31 +1,35 @@
 {
   "name": "webapp",
   "version": "1.0.0",
-  "description": "",
+  "description": "webapp for npuzzle project",
   "main": "webpack.config.js",
   "dependencies": {
-    "@material-ui/core": "^4.1.1",
-    "@material-ui/lab": "^4.0.0-alpha.16",
+    "@material-ui/core": "^4.2.1",
     "axios": "^0.19.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-device-detect": "^1.6.2",
+    "react-device-detect": "^1.7.5",
     "react-dom": "^16.8.6",
     "uniqid": "^5.0.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.1.0",
-    "@babel/core": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "css-loader": "^1.0.1",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
     "style-loader": "^0.23.1",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.5.1"
+    "webpack": "^4.38.0",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.7.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
