--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
   },
   "scripts": {
+    "heroku-prebuild": "npm install --only=dev --prefix ./webapp",
     "build": "npm install --prefix ./webapp && npm run build --prefix ./webapp"
   },
   "keywords": [],
