--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "root",
   "version": "1.0.0",
   "description": "root config",
-  "dependencies": {
-  },
-  "devDependencies": {
-  },
+  "dependencies": {},
+  "devDependencies": {},
   "scripts": {
     "heroku-prebuild": "npm install --only=dev --prefix ./webapp",
     "build": "npm install --prefix ./webapp && npm run build --prefix ./webapp"
